--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -573,7 +573,7 @@ Completed</pre></div>
     </ul>
   {% endlang_operator %}
 
-  {% lang_operator RxPHP flatMap selectMany concatMap concatMapTo %}
+  {% lang_operator RxPHP flatMap selectMany flatMapLatest concatMap concatMapTo %}
 <figure class="variant">
     <figcaption>
     <p>
@@ -610,13 +610,13 @@ Next value: 2
 Next value: 1
 Next value: 2
 Next value: 1
-Next value: 2
 Next value: 3
+Next value: 2
 Next value: 1
+Next value: 3
 Next value: 2
-Next value: 3
-Next value: 3
 Next value: 4
+Next value: 3
 Next value: 4
 Next value: 5
 Complete!
@@ -632,6 +632,42 @@ Complete!
     Alias for flatMap
     </p>
 
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>flatMapLatest</code>.
+    </p>
+    <p>
+    Bypasses a specified number of elements in an observable sequence and then returns the remaining elements.  Transform the items emitted by an Observable into Observables, and mirror those items emitted by the most-recently transformed Observable.  The flatMapLatest operator is similar to the flatMap and concatMap methods described above, however, rather than emitting all of the items emitted by all of the Observables that the operator generates by transforming items from the source Observable, flatMapLatest instead emits items from each such transformed Observable only until the next such Observable is emitted, then it ignores the previous one and begins emitting items emitted by the new one.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/flatMap/flatMapLatest.php
+
+$loop      = \React\EventLoop\Factory::create();
+$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+$source = \Rx\Observable::range(1, 3)
+    ->flatMapLatest(function ($x) {
+        return \Rx\Observable::fromArray([$x . 'a', $x . 'b']);
+    });
+
+$source->subscribe($stdoutObserver, $scheduler);
+
+$loop->run();
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 1a
+Next value: 2a
+Next value: 3a
+Next value: 3b
+Complete!
+    </pre>
+</div>
     </figcaption>
 </figure><figure class="variant">
     <figcaption>
