--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -124,6 +124,49 @@ Completed</pre></div>
     </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP switchLatest %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>switchLatest</code>.
+    </p>
+    <p>
+    Transforms an observable sequence of observable sequences into an observable sequence producing values only from the most recent observable sequence.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/switch/switchLatest.php
+
+$loop      = \React\EventLoop\Factory::create();
+$scheduler = new \Rx\Scheduler\EventLoopScheduler($loop);
+
+$source = Rx\Observable::range(0, 3)
+    ->map(function ($x) {
+        return \Rx\Observable::range($x, 3);
+    })
+    ->switchLatest();
+
+$subscription = $source->subscribe($stdoutObserver, $scheduler);
+
+$loop->run();
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0
+Next value: 1
+Next value: 2
+Next value: 3
+Next value: 4
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY exclusive select_switch switch_latest %}
     <p>
      <span style="color:#f00">TBD</span>
