Fix replay() doc: no need to call Publish on a ConnectableObservable

--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -289,9 +289,7 @@
      <img src="images/replay.png" style="width:100%;" alt="replay" />
      <figcaption><p>
       In RxJava there is a variety of the <code>replay</code> operator that returns a connectable
-      Observable. You must <a href="publish.html"><span class="operator">Publish</span></a> this
-      connectable Observable before observers can subscribe to it, and then
-      <a href="connect.html"><span class="operator">Connect</span></a> to it in order to observe its
+      Observable. You must <a href="connect.html"><span class="operator">Connect</span></a> to it in order to observe its
       emissions.
      </p><p>
       Variants of this variety of the <code>replay</code> operator permit you to set a maximum
