--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -135,7 +135,7 @@ Sequence complete.</pre></div>
      <figure>
       <img src="images/ofClass.png" style="width:100%;" alt="ofType" />
       <figcaption><p>
-       There is also a specialized form of the <span class="operator">Filter</span> operator in RxGroovy that
+       There is also a specialized form of the <span class="operator">Filter</span> operator in RxJava that
        filters an Observable so that it only emits items of a particular class.
       </p><p>
        <code>ofType</code> does not by default operate on any particular
