--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -191,6 +191,36 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP average %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>average</code>.
+    </p>
+    <p>
+    Computes the average of an observable sequence of values.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/average/average.php
+
+$source = Rx\Observable::range(0, 9)->average();
+
+$subscription = $source->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 4
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY average %}
      <p>
       <span style="color:#ff0000">TBD</span>
