--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -240,7 +240,7 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
-  {% lang_operator RxPHP map mapWithIndex mapTo select %}
+  {% lang_operator RxPHP map mapWithIndex mapTo select pluck %}
 <figure class="variant">
     <figcaption>
     <p>
@@ -336,6 +336,39 @@ Complete!
     Alias for Map
     </p>
 
+    </figcaption>
+</figure><figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP also has an operator <code>pluck</code>.
+    </p>
+    <p>
+    Returns an Observable containing the value of a specified array index (if array) or property (if object) from all elements in the Observable sequence. If a property can't be resolved the observable will error.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/pluck/pluck.php
+
+$source = Rx\Observable::fromArray([
+    (object)['value' => 0],
+    (object)['value' => 1],
+    (object)['value' => 2]
+])
+    ->pluck('value');
+
+$subscription = $source->subscribe($stdoutObserver);
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 0
+Next value: 1
+Next value: 2
+Complete!
+    </pre>
+</div>
     </figcaption>
 </figure>
   {% endlang_operator %}
