--- a/documentation/operators/min.html
+++ b/documentation/operators/min.html
@@ -166,6 +166,66 @@ Completed</pre></div></figcaption>
      </p>
   {% endlang_operator %}
 
+  {% lang_operator RxPHP min %}
+<figure class="variant">
+    <figcaption>
+    <p>
+    RxPHP implements this operator as <code>min</code>.
+    </p>
+    <p>
+    Returns the minimum value in an observable sequence according to the specified comparer.
+    </p>
+<h4>Sample Code</h4>
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/min/min.php
+
+/* Without comparer */
+$source = \Rx\Observable::fromArray([1, 3, 5, 7, 9, 2, 4, 6, 8])
+    ->min();
+
+$subscription = $source->subscribe($createStdoutObserver());
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 1
+Complete!
+    </pre>
+</div>
+
+<div class="code php">
+    <pre>
+//from https://github.com/ReactiveX/RxPHP/blob/master/demo/min/min-with-comparer.php
+
+/* With a comparer */
+$comparer = function ($x, $y) {
+    if ($x > $y) {
+        return 1;
+    } elseif ($x < $y) {
+        return -1;
+    }
+    return 0;
+};
+
+$source = \Rx\Observable::fromArray([1, 3, 5, 7, 9, 2, 4, 6, 8])
+    ->min($comparer);
+
+$subscription = $source->subscribe($createStdoutObserver());
+
+   </pre>
+</div>
+<div class="output">
+    <pre>
+Next value: 1
+Complete!
+    </pre>
+</div>
+    </figcaption>
+</figure>
+  {% endlang_operator %}
+
   {% lang_operator RxPY min min_by %}
      <p>
       <span style="color:#ff0000">TBD</span>
