Update RxScala doc to 0.26.2

--- a/rxscala/scaladoc/rx/lang/scala/observers/package.html
+++ b/rxscala/scaladoc/rx/lang/scala/observers/package.html
@@ -28,11 +28,11 @@
         </head>
         <body class="value">
       <div id="definition">
-        <img src="../../../../lib/package_big.png" />
+        <img alt="Package" src="../../../../lib/package_big.png" />
         <p id="owner"><a href="../../../package.html" class="extype" name="rx">rx</a>.<a href="../../package.html" class="extype" name="rx.lang">lang</a>.<a href="../package.html" class="extype" name="rx.lang.scala">scala</a></p>
         <h1>observers</h1><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.observers.package" title="Permalink" target="_top">
-        <img src="../../../../lib/permalink.png" />
+        <img src="../../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
       </div>
@@ -79,7 +79,7 @@
       </span>
       </h4><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.observers.package@TestSubscriber[T]extendsSubscriber[T]" title="Permalink" target="_top">
-        <img src="../../../../lib/permalink.png" />
+        <img src="../../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
       <p class="shortcomment cmt">A <a href="TestSubscriber.html" class="extype" name="rx.lang.scala.observers.TestSubscriber">TestSubscriber</a> is a variety of <a href="../Subscriber.html" class="extype" name="rx.lang.scala.Subscriber">Subscriber</a> that you can use for unit testing, to perform
@@ -104,7 +104,7 @@ assertions, inspect received events, or wrap a mocked <a href="../Subscriber.htm
       </span>
       </h4><span class="permalink">
       <a href="../../../../index.html#rx.lang.scala.observers.package@TestSubscriber" title="Permalink" target="_top">
-        <img src="../../../../lib/permalink.png" />
+        <img src="../../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
       <p class="shortcomment cmt"></p>
