--- a/rxscala/scaladoc/rx/lang/package.html
+++ b/rxscala/scaladoc/rx/lang/package.html
@@ -28,11 +28,11 @@
         </head>
         <body class="value">
       <div id="definition">
-        <img src="../../lib/package_big.png" />
+        <img alt="Package" src="../../lib/package_big.png" />
         <p id="owner"><a href="../package.html" class="extype" name="rx">rx</a></p>
         <h1>lang</h1><span class="permalink">
       <a href="../../index.html#rx.lang.package" title="Permalink" target="_top">
-        <img src="../../lib/permalink.png" />
+        <img src="../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
       </div>
@@ -83,7 +83,7 @@
       </span>
       </h4><span class="permalink">
       <a href="../../index.html#rx.lang.package@scala" title="Permalink" target="_top">
-        <img src="../../lib/permalink.png" />
+        <img src="../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
       <p class="shortcomment cmt">This package contains all classes that RxScala users need.</p><div class="fullcomment"><div class="comment cmt"><p>This package contains all classes that RxScala users need.</p><p>It basically mirrors the structure of package <code>rx</code>, but some changes were made to make it more Scala-idiomatic.
